--- a/index.html
+++ b/index.html
@@ -9,28 +9,39 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <link rel="stylesheet" href="vendor/reveal.js/css/reveal.css">
-    <link rel="stylesheet" href="vendor/reveal.js/css/theme/night.css">    
-    <link rel="stylesheet" href="styles/css/artevelde.css">
+    <link rel="stylesheet" href="vendor/reveal.js/css/theme/night.css">
 </head>
 
 <body>
     <div class="reveal">
         <div class="slides">
             <section>
-                <section data-markdown="./pages/0-00_gdm.md"></section>
-                <section data-markdown="./pages/0-01_multimediaproductie.md"></section>
+                <section data-markdown="./pages/0-0-0_gdm.md"></section>
+                <section data-markdown="./pages/0-A-0_multimediaproductie.md"></section>
+                <section data-markdown="./pages/0-B-0_jobs.md"></section>
+                <section data-markdown="./pages/0-B-A_jobs_verder.md"></section>
+                <section data-markdown="./pages/0-C-0_inhoud.md"></section>
+                <section data-markdown="./pages/0-C-A_inhoud_ontwerpen.md"></section>
+                <section data-markdown="./pages/0-C-B_inhoud_coderen.md"></section>
+                <section data-markdown="./pages/0-C-C_inhoud_templating.md"></section>
+                <section data-markdown="./pages/0-C-D_inhoud_programmeren.md"></section>
+                <section data-markdown="./pages/0-C-E_inhoud_cms.md"></section>
+                <section data-markdown="./pages/0-C-F_inhoud_versiebeheersystemen.md"></section>
+                <section data-markdown="./pages/0-C-G_inhoud_workflowautomatisatie.md"></section>
+                <section data-markdown="./pages/0-C-H_inhoud_testen.md"></section>
+                <section data-markdown="./pages/0-C-I_inhoud_data.md"></section>
             </section>
 
             <section data-background="red">
-                <section data-markdown="./pages/A-00_eerste-schijf.md"></section>
+                <section data-markdown="./pages/A-0-0_eerste-schijf.md"></section>
             </section>
 
             <section data-background="green">
-                <section data-markdown="./pages/B-00_tweede-schijf.md"></section>
+                <section data-markdown="./pages/B-0-0_tweede-schijf.md"></section>
             </section>
 
             <section data-background="blue">
-                <section data-markdown="./pages/C-00_derde-schijf.md"></section>
+                <section data-markdown="./pages/C-0-0_derde-schijf.md"></section>
             </section>
         </div>
     </div>
