--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             </section>
 
             <section data-background="red">
-                <section data-markdown="./pages/A-0-0_eerste-schijf.md"></section>
+                <section data-markdown="./pages/A-0-0_1e-schijf.md"></section>
             </section>
 
             <section data-background="green">
-                <section data-markdown="./pages/B-0-0_tweede-schijf.md"></section>
+                <section data-markdown="./pages/B-0-0_2e-schijf.md"></section>
             </section>
 
             <section data-background="blue">
-                <section data-markdown="./pages/C-0-0_derde-schijf.md"></section>
+                <section data-markdown="./pages/C-0-0_3e-schijf.md"></section>
             </section>
         </div>
     </div>
