--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <section data-markdown="./pages/0-0-0_gdm.md"></section>
                 <section data-markdown="./pages/0-A-0_multimediaproductie.md"></section>
                 <section data-markdown="./pages/0-B-0_jobs.md"></section>
-                <section data-markdown="./pages/0-B-A_jobs_verder.md"></section>
+                <section data-markdown="./pages/0-B-A_jobs_web.md"></section>
+                <section data-markdown="./pages/0-B-B_jobs_mobile.md"></section>
+                <section data-markdown="./pages/0-B-C_jobs_cms.md"></section>
+                <section data-markdown="./pages/0-B-D_jobs_verder.md"></section>
                 <section data-markdown="./pages/0-C-0_inhoud.md"></section>
                 <section data-markdown="./pages/0-C-A_inhoud_ontwerpen.md"></section>
                 <section data-markdown="./pages/0-C-B_inhoud_coderen.md"></section>
@@ -30,18 +33,23 @@
                 <section data-markdown="./pages/0-C-G_inhoud_workflowautomatisatie.md"></section>
                 <section data-markdown="./pages/0-C-H_inhoud_testen.md"></section>
                 <section data-markdown="./pages/0-C-I_inhoud_data.md"></section>
+                <section data-markdown="./pages/0-C-J_inhoud_data.md"></section>
             </section>
 
-            <section data-background="red">
+            <section data-background="hsl(0,50%,30%)">
                 <section data-markdown="./pages/A-0-0_1e-schijf.md"></section>
             </section>
 
-            <section data-background="green">
+            <section data-background="hsl(120,50%,30%)">
                 <section data-markdown="./pages/B-0-0_2e-schijf.md"></section>
             </section>
 
-            <section data-background="blue">
+            <section data-background="hsl(240,50%,30%)">
                 <section data-markdown="./pages/C-0-0_3e-schijf.md"></section>
+            </section>
+
+            <section>
+                <section data-markdown="./pages/D-0-0_profiel.md"></section>
             </section>
         </div>
     </div>
@@ -54,7 +62,7 @@
             history: true,
             center: true,
 
-            transition: 'slide', // none/fade/slide/convex/concave/zoom
+            transition: 'convex', // none/fade/slide/convex/concave/zoom
 
             // Optional reveal.js plugins
             dependencies: [
