--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
             <section data-background="hsl(120,50%,30%)">
                 <section data-markdown="./pages/B-0-0_2e-schijf.md"></section>
+                <section data-markdown="./pages/B-0-A_2e-schijf.md"></section>
             </section>
 
             <section data-background="hsl(240,50%,30%)">
                 <section data-markdown="./pages/C-0-0_3e-schijf.md"></section>
+                <section data-markdown="./pages/C-0-A_3e-schijf.md"></section>
             </section>
 
             <section>
