--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
             <section data-background="hsl(0,50%,30%)">
                 <section data-markdown="./pages/A-0-0_1e-schijf.md"></section>
+                <section data-markdown="./pages/A-0-A_1e-schijf.md"></section>
             </section>
 
             <section data-background="hsl(120,50%,30%)">
